fix: src and service name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
-  flaresolverr:
-    image: ghcr.io/magicalmadoka/openai-signup-tool
+  openai_signup_tool:
+    image: ghcr.io/magicalmadoka/openai-signup-tool:latest
     container_name: openai-signup-tool
     restart: unless-stopped
     volumes:
