--- a/.github/workflows/cloise-issue.yml
+++ b/.github/workflows/cloise-issue.yml
@@ -1,9 +1,9 @@
 name: CloseIssue
 
 on:
-  schedule:
-    - cron: '0 */1 * * *'
   workflow_dispatch:
+  issues:
+    types: [opened]
 
 jobs:
   run-python-script:
