--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,11 @@
 {
-  "domain": "",
+  "domain": "godog.eu.org",
   "proxy": "",
   "clientKey": "",
   "emailWorkerNum": 1,
   "signupWorkerNum": 1,
-  "emailAddr": "",
-  "emailPassword": "",
-  "emailImapServer": "",
+  "emailAddr": "akunkeji@163.com",
+  "emailPassword": "Akun37214728",
+  "emailImapServer": "imap.163.com",
   "emailImapPort": ""
 }
