--- a/config/config.json
+++ b/config/config.json
@@ -4,8 +4,8 @@
   "clientKey": "",
   "emailWorkerNum": 1,
   "signupWorkerNum": 1,
-  "emailAddr": "@163.com",
-  "emailPassword": "",
+  "emailAddr": "akunkeji@163.com",
+  "emailPassword": "Akun37214728",
   "emailImapServer": "imap.163.com",
   "emailImapPort": ""
 }
