--- a/config/config.json
+++ b/config/config.json
@@ -4,8 +4,8 @@
   "clientKey": "",
   "emailWorkerNum": 1,
   "signupWorkerNum": 1,
-  "emailAddr": "@163.com",
+  "emailAddr": "akunkeji@gmail.com",
   "emailPassword": "",
-  "emailImapServer": "imap.163.com",
-  "emailImapPort": ""
+  "emailImapServer": "imap.gmail.com",
+  "emailImapPort": "993"
 }
