--- a/config/config.json
+++ b/config/config.json
@@ -7,5 +7,5 @@
   "emailAddr": "akunkeji@gmail.com",
   "emailPassword": "Akun720801-1",
   "emailImapServer": "imap.gmail.com",
-  "emailImapPort": "993"
+  "emailImapPort": ""
 }
