--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,7 @@
   "emailWorkerNum": 1,
   "signupWorkerNum": 1,
   "emailAddr": "akunkeji@gmail.com",
-  "emailPassword": "Akun720801-2",
+  "emailPassword": "Akun720801-1",
   "emailImapServer": "imap.gmail.com",
-  "emailImapPort": ""
+  "emailImapPort": "993"
 }
